resources/style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 1.5em;

    background: #1e2022;
    color: #bbb;
    margin: 0 0;
}

img {
    max-height: 100%;
    max-width: 100%;
}

a { color: #6e7aac; text-decoration: none; }
a:visited { color: #6e7aac; text-decoration: none; }
a:hover { color: #6e7aac; text-decoration: underline; }

hr {
    border: transparent;
    border-top: 1px solid #2a2a2a;
    margin: 0.5em 0 0.5em 0;
}

.wrapper {
    max-width: min(95%, 1700px);
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (max-width: 600px) {
    .wrapper {
        max-width: 98%;
    }
}

.page-title {
    user-select: none;
    text-align: center;
    font-size: 2.5em;
    line-height: 1.2em;
    margin: 0.5em 0 0.3em 0;
}

.greeter-links {
    user-select: none;
    display: flex;
    font-size: 1.2em;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 0.2em;
    margin-bottom: 0.5em;
}

.greeter-links > .greeter-element {
    margin-right: 0.3em;
    margin-left: 0.3em;
}

.greeter-info {
    user-select: none;
    max-width: 500px;
    margin: auto;
    font-size: 0.9em;
    color: #aaa;
    word-break: break-word;
}

.greeter-info > b {
    display: block;
    margin-top: 1em;
}

.greeter-info-list,
.greeter-footer-list {
    padding-left: 0;
    margin: 0 2em 0 2em;
}

.all-threads {
    margin-top: 2em;
}

.greeter-subtitle {
    user-select: none;
    display: block;
    text-align: center;
    color: #555;
}

.board-time {
    display: inline;
}

.greeter-logo {
    user-select: none;
    display: block;
    text-align: center;
    height: 70px;
}

.greeter-footer {
    user-select: none;
    max-width: 500px;
    margin: auto;
    color: #aaa;
    word-break: break-word;
    margin-bottom: 0.5em;
}

/*
Styling for threads
*/

.thread-parent {
    padding: 0.5em 1em;
    margin-bottom: 5em;
    background: #151618;
}

@media only screen and (max-width: 600px) {
    .thread-parent {
        padding: 0.2em 0.5em;
    }
}

.thread-parent > .post-parent-r {
    margin-left: -1em;
    border-left: none;
}

@media only screen and (max-width: 600px) {
    .thread-parent > .post-parent-r {
        margin-left: -0.4em;
    }
}

/*
Don't display replies or collapsible anchor for OP
*/
.thread-parent > .post-parent-r > .post-parent > .post-details-2 > .post-succ,
.thread-parent > .post-parent-r > .post-parent > .post-details > .post-collapsible-anchor {
    display: none;
}

.thread-details {
    user-select: none;
    margin-bottom: 0.5em;
}

.thread-op,
.thread-op > a,
.thread-op > a:hover,
.thread-op > a:visited
{
    color: #555;
    float: right;
}

.thread-sub-description {
    user-select: none;
    display: block;
    max-height: 140px;
    overflow: hidden;
}

.thread-description {
    display: none;
}

.thread-sub {
    font-size: 1.4em;
    font-weight: bold;
    color: #ddd;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.thread-details-2 {
    user-select: none;
    display: none;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.thread-replies-parent {
    display: block;
    text-align: center;
}

.thread-replies {
    display: inline;
    color: #777;
}

.thread-images {
    display: inline;
    color: #777;
}

.thread-time {
    user-select: none;
    display: block;
    text-align: center;
    color: #555;
}

.thread-thumbnail {
    user-select: none;
    height: 150px;
    max-width: 200px;
}

.thread-thumbnail > a {
    display: flex;
    justify-content: center;
    height: 100%;
}

.thread-thumbnail > a > img {
    margin: auto;
}

/*
Styling for thread options
*/

.thread-options {
    user-select: none;
    margin: 1em 0 0.5em -1em;
    padding-left: 1em;
    color: #666;
    text-align: right;
    float: right;
}

@media only screen and (max-width: 600px) {
    .thread-options {
        float: none;
    }
}

.thread-files-dump {
    display: block;
    margin: 0.5em  0 1em 0;
    text-align: left;
    color: #777;
}

.thread-files-dump > div > a {
    color: #579394;
}

/*
Styling for posts
*/

.post-parent-r {
    border-left: 1px solid #282a2e;
    margin-left: 1em;
}

@media only screen and (max-width: 600px) {
    .post-parent-r {
        margin-left: 0.4em;
    }
}

.post-parent-r > .no-embed { margin-left: 0em; }

.post-parent {
    background: #282a2e;
    padding: 0.5em 1em;
    margin-bottom: 0.5em;
    display: table;
    border: 1px transparent;
}

.post-details {
    user-select: none;
    margin-bottom: 0.5em;
    color: #555;
}

.post-no {
    float: right;
}

.post-complexity {
    display: inline-flex;
    margin-right: 0.5em;
    color: #c676eb;
    max-width: calc(100% - 15em);
    overflow: hidden;
}

.post-complexity-number {
    display: inline;
    margin-right: 0.5em;
    color: #555;
}

.post-file {
    word-break: break-all;
    margin-bottom: 0.4em;
}

.post-file > a {
    color: #579394;
}

.post-details-2 {
    user-select: none;
    margin-top: 0.5em;
    font-size: 0.9em;
    color: #555;
}

.post-time,
.post-country-name,
.post-id,
.post-name {
    display: inline;
    margin-right: 1em;
    color: #555;
}

.post-succ {
    display: inline;
}

.post-succ > .post-a {
    margin-right: 0.5em;
}

.post {
    white-space: pre-line;
    word-break: break-word;
}

.green-text {
    display: inline;
    color: #b5bd68;
}

.reply-text {
    display: inline;
    color: #6e7aac;
}

.post-a {
    display: inline;
}

/*
Styling for collapsible
*/

.collapsed {
    display: inline-block;
    min-height: 1.5em;
    max-height: 1.5em;
    background: #202022;
}

.collapsed > * {
    display: none;
}

.collapsed > .post-details {
    display: block;
}

.collapsed-parent > .post-parent-r {
    display: none;
}

.collapsed-thread-parent {
    padding: 0.6em 1em;
    display: inline-block;
    vertical-align: top;
    height: 330px;
    width: 160px;
    margin-right: 1em;
    margin-bottom: 3em;
    line-height: 1.3em;
    overflow: hidden;
    position: relative;
}

.collapsed-thread-parent > .thread-thumbnail {
    height: 100px;
}

.collapsed-thread-parent > .thread-sub-description > .thread-description {
    display: inline;
    /* word-break: break-word; */
}

.collapsed-thread-parent > .thread-sub-description > .thread-sub {
    display: inline;
    font-size: 1em;
}

.collapsed-thread-parent > .thread-options,
.collapsed-thread-parent > .thread-files-dump,
.collapsed-thread-parent > .post-parent-r {
    display: none;
}

.collapsed-thread-parent > .thread-details-2 {
    display: block;
}

.post-collapsible-anchor,
.thread-collapsible-anchor {
    display: inline;
    margin-right: 0.5em;
    color: #555;
    font-size: 1.4em;
}

/*
pointer + underline for clicky stuff
*/
.post-collapsible-anchor:hover,
.thread-collapsible-anchor:hover,
.post-a:hover,
.post-no:hover,
.reply-text:hover,
.thread-maximize-replies:hover,
.thread-reset:hover,
.thread-files-all:hover
{
    cursor: pointer;
    text-decoration: underline;
}

